--- a/develop.htm
+++ b/develop.htm
@@ -1,89 +1,20 @@
-<!--
- ____________________________________________________________
-|                                                            |
-|    DESIGN + Pat Heard { http://fullahead.org }             |
-|      DATE + 2006.09.12                                     |
-| COPYRIGHT + Free use if this notice is kept in place.      |
-|____________________________________________________________|
-
--->
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <title>司徒的教學網站</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta http-lowast="content-type" content="application/xhtml+xml; charset=UTF-8" />
-  <meta name="author" content="fullahead.org" />
-  <meta name="keywords" content="XHTML, CSS, template, FullAhead" />
-  <meta name="description" content="A valid, XHTML 1.0 template" />
-  <meta name="robots" content="index, follow, noarchive" />
-  <meta name="googlebot" content="noarchive" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
+<head><script type="text/javascript" src="home_head.js"></script>
 
-  <link rel="shortcut icon" href="website.ico">
-  <link rel="stylesheet" type="text/css" href="styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="styles/shThemeEmacs.css" />
-  <link rel="stylesheet" type="text/css" href="css/html.css" media="screen, projection, tv " />
-  <link rel="stylesheet" type="text/css" href="css/layout.css" media="screen, projection, tv" />
-  <link rel="stylesheet" type="text/css" href="css/print.css" media="print" />
-  
-  <script type="text/javascript" src="scripts/shCore.js"></script>
-  <script type="text/javascript" src="scripts/shBrushCpp.js"></script>
-
-  <!-- Conditional comment to apply opacity fix for IE #content background.
-       Invalid CSS, but can be removed without harming design -->
-  <!--[if gt IE 5]>
-  <link rel="stylesheet" type="text/css" href="css/ie.css" media="screen, projection, tv " />
-  <![endif]-->
-</head>
-
-<body>
-<script type="text/javascript">SyntaxHighlighter.all();</script>
-<div id="wrapper">
-<div id="content">
-<script type="text/javascript" src="header.js"></script>
 <ul id="menu" class="four">
-    <li><a href="index.htm">
-    <span class="big">掌</span>機</a></li>
-    <li><a href="phone.htm">
-    <span class="big">手</span>機</a></li>
-    <li><a href="system.htm">
-    <span class="big">系</span>統</a></li>
-    <li><a href="develop.htm" class="here">
-    <span class="big">二</span>次開發</a></li>
-    <li><a href="emu.htm">
-    <span class="big">模</span>擬器</a></li>
-    <li><a href="umpc.htm">
-    <span class="big">微</span>電腦</a></li>
-    <li><a href="mcu.htm">
-    <span class="big">微</span>處理器</a></li>
-    <li><a href="program.htm">
-    <span class="big">程</span>式設計</a></li>
-    <li><a href="driver.htm">
-    <span class="big">驅</span>動程式</a></li>
-    <li><a href="picture.htm">
-    <span class="big">繪</span>圖相關</a></li>
-    <li><a href="reverse.htm">
-    <span class="big">逆</span>向工程</a></li>
-    <li><a href="trip.htm">
-    <span class="big">旅</span>遊雜記</a></li>
+    <li><a href="index.htm">                    <span class="big">掌</span>機</a></li>
+    <li><a href="phone.htm">                    <span class="big">手</span>機</a></li>
+    <li><a href="system.htm">                   <span class="big">系</span>統</a></li>
+    <li><a href="develop.htm" class="here">     <span class="big">二</span>次開發</a></li>
+    <li><a href="emu.htm">                      <span class="big">模</span>擬器</a></li>
+    <li><a href="umpc.htm">                     <span class="big">微</span>電腦</a></li>
+    <li><a href="mcu.htm">                      <span class="big">微</span>處理器</a></li>
+    <li><a href="program.htm">                  <span class="big">程</span>式設計</a></li>
+    <li><a href="driver.htm">                   <span class="big">驅</span>動程式</a></li>
+    <li><a href="picture.htm">                  <span class="big">繪</span>圖相關</a></li>
+    <li><a href="reverse.htm">                  <span class="big">逆</span>向工程</a></li>
+    <li><a href="trip.htm">                     <span class="big">旅</span>遊雜記</a></li>
 </ul>
 
-<div id="page">
-<br><br>
-<p>
-</p>
-</div>
-
-<div id="page">
-<br><br>
-<p>
-
-</p>
-</div>
-</div>
-</div>
-</body>
-</html>
+<br><script type="text/javascript" src="tail.js"></script>
