--- a/phone.htm
+++ b/phone.htm
@@ -1,109 +1,53 @@
-<!--
- ____________________________________________________________
-|                                                            |
-|    DESIGN + Pat Heard { http://fullahead.org }             |
-|      DATE + 2006.09.12                                     |
-| COPYRIGHT + Free use if this notice is kept in place.      |
-|____________________________________________________________|
-
--->
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <title>司徒的教學網站</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta http-lowast="content-type" content="application/xhtml+xml; charset=UTF-8" />
-  <meta name="author" content="fullahead.org" />
-  <meta name="keywords" content="XHTML, CSS, template, FullAhead" />
-  <meta name="description" content="A valid, XHTML 1.0 template" />
-  <meta name="robots" content="index, follow, noarchive" />
-  <meta name="googlebot" content="noarchive" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
+<head><script type="text/javascript" src="home_head.js"></script>
 
-  <link rel="shortcut icon" href="website.ico">
-  <link rel="stylesheet" type="text/css" href="styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="styles/shThemeEmacs.css" />
-  <link rel="stylesheet" type="text/css" href="css/html.css" media="screen, projection, tv " />
-  <link rel="stylesheet" type="text/css" href="css/layout.css" media="screen, projection, tv" />
-  <link rel="stylesheet" type="text/css" href="css/print.css" media="print" />
-  
-  <script type="text/javascript" src="scripts/shCore.js"></script>
-  <script type="text/javascript" src="scripts/shBrushCpp.js"></script>
-
-  <!-- Conditional comment to apply opacity fix for IE #content background.
-       Invalid CSS, but can be removed without harming design -->
-  <!--[if gt IE 5]>
-  <link rel="stylesheet" type="text/css" href="css/ie.css" media="screen, projection, tv " />
-  <![endif]-->
-</head>
-
-<body>
-<script type="text/javascript">SyntaxHighlighter.all();</script>
-<div id="wrapper">
-<div id="content">
-<script type="text/javascript" src="header.js"></script>
 <ul id="menu" class="four">
-    <li><a href="index.htm">
-    <span class="big">掌</span>機</a></li>
-    <li><a href="phone.htm" class="here">
-    <span class="big">手</span>機</a></li>
-    <li><a href="system.htm">
-    <span class="big">系</span>統</a></li>
-    <li><a href="develop.htm">
-    <span class="big">二</span>次開發</a></li>
-    <li><a href="emu.htm">
-    <span class="big">模</span>擬器</a></li>
-    <li><a href="umpc.htm">
-    <span class="big">微</span>電腦</a></li>
-    <li><a href="mcu.htm">
-    <span class="big">微</span>處理器</a></li>
-    <li><a href="program.htm">
-    <span class="big">程</span>式設計</a></li>
-    <li><a href="driver.htm">
-    <span class="big">驅</span>動程式</a></li>
-    <li><a href="picture.htm">
-    <span class="big">繪</span>圖相關</a></li>
-    <li><a href="reverse.htm">
-    <span class="big">逆</span>向工程</a></li>
-    <li><a href="trip.htm">
-    <span class="big">旅</span>遊雜記</a></li>
+    <li><a href="index.htm">                <span class="big">掌</span>機</a></li>
+    <li><a href="phone.htm" class="here">   <span class="big">手</span>機</a></li>
+    <li><a href="system.htm">               <span class="big">系</span>統</a></li>
+    <li><a href="develop.htm">              <span class="big">二</span>次開發</a></li>
+    <li><a href="emu.htm">                  <span class="big">模</span>擬器</a></li>
+    <li><a href="umpc.htm">                 <span class="big">微</span>電腦</a></li>
+    <li><a href="mcu.htm">                  <span class="big">微</span>處理器</a></li>
+    <li><a href="program.htm">              <span class="big">程</span>式設計</a></li>
+    <li><a href="driver.htm">               <span class="big">驅</span>動程式</a></li>
+    <li><a href="picture.htm">              <span class="big">繪</span>圖相關</a></li>
+    <li><a href="reverse.htm">              <span class="big">逆</span>向工程</a></li>
+    <li><a href="trip.htm">                 <span class="big">旅</span>遊雜記</a></li>
 </ul>
 
-<div id="page">
-<br><br>
+<div id="page"><br><br>
 <p>
-    <a href="#n900"><img src="img/photos/n900.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Nokia N900"/></a>
-    <a href="#astro"><img src="img/photos/astro.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Astro Slide 5G"/></a>
-    <a href="#cosmo"><img src="img/photos/cosmo.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Cosmo Communicator"/></a>
-    <a href="#gemini-pda"><img src="img/photos/gemini-pda.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Gemini PDA 4G"/></a>
-    <a href="#q30"><img src="img/photos/q30.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Blackberry Passport"/></a>
-    <a href="#f07c"><img src="img/photos/f07c.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Fujitsu F-07C"/></a>
-    <a href="#jolla"><img src="img/photos/jolla.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Jolla Phone"/></a>
-    <a href="#curve9320"><img src="img/photos/curve9320.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Blackberry Curve9320"/></a>
-    <a href="#xt894"><img src="img/photos/xt894.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Motorola XT894"/></a>
-    <a href="#xt897"><img src="img/photos/xt897.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Motorola XT897"/></a>
-    <a href="#pro1x"><img src="img/photos/pro1x.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="F(x)tec Pro1 X"/></a>
-    <a href="#pro1"><img src="img/photos/pro1.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="F(x)tec Pro1"/></a>
-    <a href="#titan"><img src="img/photos/titan.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Unihertz Titan"/></a>
-    <a href="#pixel3axl"><img src="img/photos/pixel3axl.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Google Pixel 3a XL"/></a>
-    <a href="#pinephone"><img src="img/photos/pinephone.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="PINE64 PinePhone"/></a>
-    <a href="#f5321"><img src="img/photos/f5321.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Sony Xperia X Compact"/></a>
+    <a href="#n900">            <img src="img/photos/n900.jpg"          class="t0" title="Nokia N900"/></a>
+    <a href="#astro">           <img src="img/photos/astro.jpg"         class="t0" title="Astro Slide 5G"/></a>
+    <a href="#cosmo">           <img src="img/photos/cosmo.jpg"         class="t0" title="Cosmo Communicator"/></a>
+    <a href="#gemini-pda">      <img src="img/photos/gemini-pda.jpg"    class="t0" title="Gemini PDA 4G"/></a>
+    <a href="#q30">             <img src="img/photos/q30.jpg"           class="t0" title="Blackberry Passport"/></a>
+    <a href="#f07c">            <img src="img/photos/f07c.jpg"          class="t0" title="Fujitsu F-07C"/></a>
+    <a href="#jolla">           <img src="img/photos/jolla.jpg"         class="t0" title="Jolla Phone"/></a>
+    <a href="#curve9320">       <img src="img/photos/curve9320.jpg"     class="t0" title="Blackberry Curve9320"/></a>
+    <a href="#xt894">           <img src="img/photos/xt894.jpg"         class="t0" title="Motorola XT894"/></a>
+    <a href="#xt897">           <img src="img/photos/xt897.jpg"         class="t0" title="Motorola XT897"/></a>
+    <a href="#pro1x">           <img src="img/photos/pro1x.jpg"         class="t0" title="F(x)tec Pro1 X"/></a>
+    <a href="#pro1">            <img src="img/photos/pro1.jpg"          class="t0" title="F(x)tec Pro1"/></a>
+    <a href="#titan">           <img src="img/photos/titan.jpg"         class="t0" title="Unihertz Titan"/></a>
+    <a href="#pixel3axl">       <img src="img/photos/pixel3axl.jpg"     class="t0" title="Google Pixel 3a XL"/></a>
+    <a href="#pinephone">       <img src="img/photos/pinephone.jpg"     class="t0" title="PINE64 PinePhone"/></a>
+    <a href="#f5321">           <img src="img/photos/f5321.jpg"         class="t0" title="Sony Xperia X Compact"/></a>
 </p>
 </div>
 
-<div id="page">
-<br><br>
+<div id="page"><br><br>
 <p>
 <div id="n900"></div>
 <h3><img src="img/photos/n900.jpg" class="floatLeft"/>
 Nokia N900</h3>
 <hr size="1"><br><br><br><br><br>
 
-&lowast;
-<a href="phone/n900/review.htm">
-介紹</a><br>
+&dash;
+<a href="phone/n900_spec.htm">
+簡要規格</a><br>
 
 &lowast;
 <a href="phone/n900/charge_led.htm">
@@ -2527,10 +2471,6 @@ USB腳位</a><br>
 <a href="phone/f5321/uart.htm">
 UART腳位</a><br>
 <br><br><br><br>
-
 </p>
-</div>
-</div>
-</div>
-</body>
-</html>
+
+<br><script type="text/javascript" src="tail.js"></script>
