--- a/picture.htm
+++ b/picture.htm
@@ -1,94 +1,38 @@
-<!--
- ____________________________________________________________
-|                                                            |
-|    DESIGN + Pat Heard { http://fullahead.org }             |
-|      DATE + 2006.09.12                                     |
-| COPYRIGHT + Free use if this notice is kept in place.      |
-|____________________________________________________________|
-
--->
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <title>司徒的教學網站</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta http-lowast="content-type" content="application/xhtml+xml; charset=UTF-8" />
-  <meta name="author" content="fullahead.org" />
-  <meta name="keywords" content="XHTML, CSS, template, FullAhead" />
-  <meta name="description" content="A valid, XHTML 1.0 template" />
-  <meta name="robots" content="index, follow, noarchive" />
-  <meta name="googlebot" content="noarchive" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
+<head><script type="text/javascript" src="home_head.js"></script>
 
-  <link rel="shortcut icon" href="website.ico">
-  <link rel="stylesheet" type="text/css" href="styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="styles/shThemeEmacs.css" />
-  <link rel="stylesheet" type="text/css" href="css/html.css" media="screen, projection, tv " />
-  <link rel="stylesheet" type="text/css" href="css/layout.css" media="screen, projection, tv" />
-  <link rel="stylesheet" type="text/css" href="css/print.css" media="print" />
-  
-  <script type="text/javascript" src="scripts/shCore.js"></script>
-  <script type="text/javascript" src="scripts/shBrushCpp.js"></script>
-
-  <!-- Conditional comment to apply opacity fix for IE #content background.
-       Invalid CSS, but can be removed without harming design -->
-  <!--[if gt IE 5]>
-  <link rel="stylesheet" type="text/css" href="css/ie.css" media="screen, projection, tv " />
-  <![endif]-->
-</head>
-
-<body>
-<script type="text/javascript">SyntaxHighlighter.all();</script>
-<div id="wrapper">
-<div id="content">
-<script type="text/javascript" src="header.js"></script>
 <ul id="menu" class="four">
-    <li><a href="index.htm">
-    <span class="big">掌</span>機</a></li>
-    <li><a href="phone.htm">
-    <span class="big">手</span>機</a></li>
-    <li><a href="system.htm">
-    <span class="big">系</span>統</a></li>
-    <li><a href="develop.htm">
-    <span class="big">二</span>次開發</a></li>
-    <li><a href="emu.htm">
-    <span class="big">模</span>擬器</a></li>
-    <li><a href="umpc.htm">
-    <span class="big">微</span>電腦</a></li>
-    <li><a href="mcu.htm">
-    <span class="big">微</span>處理器</a></li>
-    <li><a href="program.htm">
-    <span class="big">程</span>式設計</a></li>
-    <li><a href="driver.htm">
-    <span class="big">驅</span>動程式</a></li>
-    <li><a href="picture.htm" class="here">
-    <span class="big">繪</span>圖相關</a></li>
-    <li><a href="reverse.htm">
-    <span class="big">逆</span>向工程</a></li>
-    <li><a href="trip.htm">
-    <span class="big">旅</span>遊雜記</a></li>
+    <li><a href="index.htm">                    <span class="big">掌</span>機</a></li>
+    <li><a href="phone.htm">                    <span class="big">手</span>機</a></li>
+    <li><a href="system.htm">                   <span class="big">系</span>統</a></li>
+    <li><a href="develop.htm">                  <span class="big">二</span>次開發</a></li>
+    <li><a href="emu.htm">                      <span class="big">模</span>擬器</a></li>
+    <li><a href="umpc.htm">                     <span class="big">微</span>電腦</a></li>
+    <li><a href="mcu.htm">                      <span class="big">微</span>處理器</a></li>
+    <li><a href="program.htm">                  <span class="big">程</span>式設計</a></li>
+    <li><a href="driver.htm">                   <span class="big">驅</span>動程式</a></li>
+    <li><a href="picture.htm" class="here">     <span class="big">繪</span>圖相關</a></li>
+    <li><a href="reverse.htm">                  <span class="big">逆</span>向工程</a></li>
+    <li><a href="trip.htm">                     <span class="big">旅</span>遊雜記</a></li>
 </ul>
 
-<div id="page">
-<br><br>
+<div id="page"><br><br>
 <p>
-    <a href="#openscad"><img src="img/photos/openscad.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="OpenSCAD"/></a>
-    <a href="#kicad"><img src="img/photos/kicad.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="KiCAD"/></a>
-    <a href="#fritzing"><img src="img/photos/fritzing.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Fritzing"/></a>
-    <a href="#gimp"><img src="img/photos/gimp.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="GIMP"/></a>
-    <a href="#cnc1610pro"><img src="img/photos/cnc1610pro.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CNC1610 Pro"/></a>
-    <a href="#ender3pro"><img src="img/photos/ender3pro.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Ender 3 Pro 3D印表機"/></a>
-    <a href="#cr7"><img src="img/photos/cr7.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="CR-7 3D印表機"/></a>
-    <a href="#mini-kossel"><img src="img/photos/mini-kossel.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Mini Kossel 3D印表機"/></a>
-    <a href="#m3d"><img src="img/photos/m3d.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Micro 3D印表機"/></a>
-    <a href="#davinci-mini"><img src="img/photos/davinci-mini.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="da Vinci Mini 3D印表機"/></a>
+    <a href="#openscad">        <img src="img/photos/openscad.jpg"          class="t0" title="OpenSCAD"/></a>
+    <a href="#kicad">           <img src="img/photos/kicad.jpg"             class="t0" title="KiCAD"/></a>
+    <a href="#fritzing">        <img src="img/photos/fritzing.jpg"          class="t0" title="Fritzing"/></a>
+    <a href="#gimp">            <img src="img/photos/gimp.jpg"              class="t0" title="GIMP"/></a>
+    <a href="#cnc1610pro">      <img src="img/photos/cnc1610pro.jpg"        class="t0" title="CNC1610 Pro"/></a>
+    <a href="#ender3pro">       <img src="img/photos/ender3pro.jpg"         class="t0" title="Ender 3 Pro 3D印表機"/></a>
+    <a href="#cr7">             <img src="img/photos/cr7.jpg"               class="t0" title="CR-7 3D印表機"/></a>
+    <a href="#mini-kossel">     <img src="img/photos/mini-kossel.jpg"       class="t0" title="Mini Kossel 3D印表機"/></a>
+    <a href="#m3d">             <img src="img/photos/m3d.jpg"               class="t0" title="Micro 3D印表機"/></a>
+    <a href="#davinci-mini">    <img src="img/photos/davinci-mini.jpg"      class="t0" title="da Vinci Mini 3D印表機"/></a>
 </p>
 </div>
 
-<div id="page">
-<br><br>
+<div id="page"><br><br>
 <p>
 <div id="openscad"></div>
 <h3><img src="img/photos/openscad.jpg" class="floatLeft"/>
@@ -507,8 +451,5 @@ da Vinci Mini 3D印表機</h3>
 口紅膠、3M 2090膠帶</a>
 <br><br><br><br>
 </p>
-</div>
-</div>
-</div>
-</body>
-</html>
+
+<br><script type="text/javascript" src="tail.js"></script>
