--- a/program.htm
+++ b/program.htm
@@ -1,110 +1,54 @@
-<!--
- ____________________________________________________________
-|                                                            |
-|    DESIGN + Pat Heard { http://fullahead.org }             |
-|      DATE + 2006.09.12                                     |
-| COPYRIGHT + Free use if this notice is kept in place.      |
-|____________________________________________________________|
-
--->
-
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
-<head>
-  <title>司徒的教學網站</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <meta http-lowast="content-type" content="application/xhtml+xml; charset=UTF-8" />
-  <meta name="author" content="fullahead.org" />
-  <meta name="keywords" content="XHTML, CSS, template, FullAhead" />
-  <meta name="description" content="A valid, XHTML 1.0 template" />
-  <meta name="robots" content="index, follow, noarchive" />
-  <meta name="googlebot" content="noarchive" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes, minimum-scale=0.1, maximum-scale=100.0"/>
+<head><script type="text/javascript" src="home_head.js"></script>
 
-  <link rel="shortcut icon" href="website.ico">
-  <link rel="stylesheet" type="text/css" href="styles/shCore.css" />
-  <link rel="stylesheet" type="text/css" href="styles/shThemeEmacs.css" />
-  <link rel="stylesheet" type="text/css" href="css/html.css" media="screen, projection, tv " />
-  <link rel="stylesheet" type="text/css" href="css/layout.css" media="screen, projection, tv" />
-  <link rel="stylesheet" type="text/css" href="css/print.css" media="print" />
-  
-  <script type="text/javascript" src="scripts/shCore.js"></script>
-  <script type="text/javascript" src="scripts/shBrushCpp.js"></script>
-
-  <!-- Conditional comment to apply opacity fix for IE #content background.
-       Invalid CSS, but can be removed without harming design -->
-  <!--[if gt IE 5]>
-  <link rel="stylesheet" type="text/css" href="css/ie.css" media="screen, projection, tv " />
-  <![endif]-->
-</head>
-
-<body>
-<script type="text/javascript">SyntaxHighlighter.all();</script>
-<div id="wrapper">
-<div id="content">
-<script type="text/javascript" src="header.js"></script>
 <ul id="menu" class="four">
-    <li><a href="index.htm">
-    <span class="big">掌</span>機</a></li>
-    <li><a href="phone.htm">
-    <span class="big">手</span>機</a></li>
-    <li><a href="system.htm">
-    <span class="big">系</span>統</a></li>
-    <li><a href="develop.htm">
-    <span class="big">二</span>次開發</a></li>
-    <li><a href="emu.htm">
-    <span class="big">模</span>擬器</a></li>
-    <li><a href="umpc.htm">
-    <span class="big">微</span>電腦</a></li>
-    <li><a href="mcu.htm">
-    <span class="big">微</span>處理器</a></li>
-    <li><a href="program.htm" class="here">
-    <span class="big">程</span>式設計</a></li>
-    <li><a href="driver.htm">
-    <span class="big">驅</span>動程式</a></li>
-    <li><a href="picture.htm">
-    <span class="big">繪</span>圖相關</a></li>
-    <li><a href="reverse.htm">
-    <span class="big">逆</span>向工程</a></li>
-    <li><a href="trip.htm">
-    <span class="big">旅</span>遊雜記</a></li>
+    <li><a href="index.htm">                    <span class="big">掌</span>機</a></li>
+    <li><a href="phone.htm">                    <span class="big">手</span>機</a></li>
+    <li><a href="system.htm">                   <span class="big">系</span>統</a></li>
+    <li><a href="develop.htm">                  <span class="big">二</span>次開發</a></li>
+    <li><a href="emu.htm">                      <span class="big">模</span>擬器</a></li>
+    <li><a href="umpc.htm">                     <span class="big">微</span>電腦</a></li>
+    <li><a href="mcu.htm">                      <span class="big">微</span>處理器</a></li>
+    <li><a href="program.htm" class="here">     <span class="big">程</span>式設計</a></li>
+    <li><a href="driver.htm">                   <span class="big">驅</span>動程式</a></li>
+    <li><a href="picture.htm">                  <span class="big">繪</span>圖相關</a></li>
+    <li><a href="reverse.htm">                  <span class="big">逆</span>向工程</a></li>
+    <li><a href="trip.htm">                     <span class="big">旅</span>遊雜記</a></li>
 </ul>
 
-<div id="page">
-<br><br>
+<div id="page"><br><br>
 <p>
-    <a href="#gnu"><img src="img/photos/gnu.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="GNU"/></a>
-    <a href="#nasm"><img src="img/photos/nasm.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Netwide Assembler (NASM)"/></a>
-    <a href="#masm32"><img src="img/photos/masm32.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="MASM32"/></a>
-    <a href="#hla"><img src="img/photos/hla.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="High Level Assembly(HLA)"/></a>
-    <a href="#fasm"><img src="img/photos/fasm.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Flat Assembler (FASM)"/></a>
-    <a href="#wine"><img src="img/photos/wine.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Wine"/></a>
-    <a href="#mingw"><img src="img/photos/mingw.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="MinGW"/></a>
-    <a href="#wayland"><img src="img/photos/wayland.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Wayland"/></a>
-    <a href="#rust"><img src="img/photos/rust.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Rust"/></a>
-    <a href="#sdl"><img src="img/photos/sdl.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SDL"/></a>
-    <a href="#sfml"><img src="img/photos/sfml.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="SFML"/></a>
-    <a href="#python"><img src="img/photos/python.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Python"/></a>
-    <a href="#golang"><img src="img/photos/golang.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Golang"/></a>
-    <a href="#gtk"><img src="img/photos/gtk.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Gtk"/></a>
-    <a href="#qt"><img src="img/photos/qt.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Qt"/></a>
-    <a href="#opencv"><img src="img/photos/opencv.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="OpenCV"/></a>
-    <a href="#hildon"><img src="img/photos/hildon.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Hildon"/></a>
-    <a href="#vc"><img src="img/photos/vc.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Visual C++"/></a>
-    <a href="#vb"><img src="img/photos/vb.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Visual Basic"/></a>
-    <a href="#csharp"><img src="img/photos/csharp.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="C#"/></a>
-    <a href="#mcu8051ide"><img src="img/photos/mcu8051ide.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="MCU 8051 IDE"/></a>
-    <a href="#ucblogo"><img src="img/photos/ucblogo.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Berkeley Logo (UCBLogo)"/></a>
-    <a href="#java"><img src="img/photos/java.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="Java"/></a>
-    <a href="#matlab"><img src="img/photos/matlab.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="MATLAB"/></a>
-    <a href="#lua"><img src="img/photos/lua.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="LUA"/></a>
-    <a href="#leetcode"><img src="img/photos/leetcode.jpg" class="floatLeft" style="width:75px;height:75px;border:0px;" title="LeetCode"/></a>
+    <a href="#gnu">             <img src="img/photos/gnu.jpg"           class="t0" title="GNU"/></a>
+    <a href="#nasm">            <img src="img/photos/nasm.jpg"          class="t0" title="Netwide Assembler (NASM)"/></a>
+    <a href="#masm32">          <img src="img/photos/masm32.jpg"        class="t0" title="MASM32"/></a>
+    <a href="#hla">             <img src="img/photos/hla.jpg"           class="t0" title="High Level Assembly(HLA)"/></a>
+    <a href="#fasm">            <img src="img/photos/fasm.jpg"          class="t0" title="Flat Assembler (FASM)"/></a>
+    <a href="#wine">            <img src="img/photos/wine.jpg"          class="t0" title="Wine"/></a>
+    <a href="#mingw">           <img src="img/photos/mingw.jpg"         class="t0" title="MinGW"/></a>
+    <a href="#wayland">         <img src="img/photos/wayland.jpg"       class="t0" title="Wayland"/></a>
+    <a href="#rust">            <img src="img/photos/rust.jpg"          class="t0" title="Rust"/></a>
+    <a href="#sdl">             <img src="img/photos/sdl.jpg"           class="t0" title="SDL"/></a>
+    <a href="#sfml">            <img src="img/photos/sfml.jpg"          class="t0" title="SFML"/></a>
+    <a href="#python">          <img src="img/photos/python.jpg"        class="t0" title="Python"/></a>
+    <a href="#golang">          <img src="img/photos/golang.jpg"        class="t0" title="Golang"/></a>
+    <a href="#gtk">             <img src="img/photos/gtk.jpg"           class="t0" title="Gtk"/></a>
+    <a href="#qt">              <img src="img/photos/qt.jpg"            class="t0" title="Qt"/></a>
+    <a href="#opencv">          <img src="img/photos/opencv.jpg"        class="t0" title="OpenCV"/></a>
+    <a href="#hildon">          <img src="img/photos/hildon.jpg"        class="t0" title="Hildon"/></a>
+    <a href="#vc">              <img src="img/photos/vc.jpg"            class="t0" title="Visual C++"/></a>
+    <a href="#vb">              <img src="img/photos/vb.jpg"            class="t0" title="Visual Basic"/></a>
+    <a href="#csharp">          <img src="img/photos/csharp.jpg"        class="t0" title="C#"/></a>
+    <a href="#mcu8051ide">      <img src="img/photos/mcu8051ide.jpg"    class="t0" title="MCU 8051 IDE"/></a>
+    <a href="#ucblogo">         <img src="img/photos/ucblogo.jpg"       class="t0" title="Berkeley Logo (UCBLogo)"/></a>
+    <a href="#java">            <img src="img/photos/java.jpg"          class="t0" title="Java"/></a>
+    <a href="#matlab">          <img src="img/photos/matlab.jpg"        class="t0" title="MATLAB"/></a>
+    <a href="#lua">             <img src="img/photos/lua.jpg"           class="t0" title="LUA"/></a>
+    <a href="#leetcode">        <img src="img/photos/leetcode.jpg"      class="t0" title="LeetCode"/></a>
 </p>
 </div>
 
-<div id="page">
-<br><br>
+<div id="page"><br><br>
 <p>
 <div id="gnu"></div>
 <h3><img src="img/photos/gnu.jpg" class="floatLeft"/>
@@ -2952,10 +2896,6 @@ LeetCode</h3>
     <a href="program/leetcode/rust_912.htm">
     912. Sort an Array</a><br>
 <br><br><br><br>
-
 </p>
-</div>
-</div>
-</div>
-</body>
-</html>
+
+<br><script type="text/javascript" src="tail.js"></script>
