--- a/handheld/pyra_bootcard.htm
+++ b/handheld/pyra_bootcard.htm
@@ -3,8 +3,7 @@
 <head><script type="text/javascript" src="../page_head.js"></script>
 
 <h3><a href="../index.htm">掌機</a> - Pyra - <b>如何製作可開機SD</b></h3>
-<hr size="1">
-<br>
+<hr size="1"><br>
 <p>
 參考資訊：<br>
 https://dev.pyra-handheld.com/daveshah/pyra-uboot/-/tree/pyra-alt-ddr3<br>
