--- a/handheld/pyra_charge.htm
+++ b/handheld/pyra_charge.htm
@@ -3,8 +3,7 @@
 <head><script type="text/javascript" src="../page_head.js"></script>
 
 <h3><a href="../index.htm">掌機</a> - Pyra - <b>充電孔</b></h3>
-<hr size="1">
-<br>
+<hr size="1"><br>
 <p>
 只能使用如下孔位充電<br>
 <img src="pyra_charge/1.jpg" class="maxSize">
