--- a/handheld/pyra_fix_hdmi.htm
+++ b/handheld/pyra_fix_hdmi.htm
@@ -3,8 +3,7 @@
 <head><script type="text/javascript" src="../page_head.js"></script>
 
 <h3><a href="../index.htm">掌機</a> - Pyra - <b>解決drivers/bus/omap_l3_noc.c:147 l3_interrupt_handler問題</b></h3>
-<hr size="1">
-<br>
+<hr size="1"><br>
 <p>
 問題如下：
 </p>
