--- a/handheld/pyra_hotkey.htm
+++ b/handheld/pyra_hotkey.htm
@@ -3,8 +3,7 @@
 <head><script type="text/javascript" src="../page_head.js"></script>
 
 <h3><a href="../index.htm">掌機</a> - Pyra - <b>快速鍵</b></h3>
-<hr size="1">
-<br>
+<hr size="1"><br>
 <table>
 <tr><th>按鍵</th><th>說明</th></tr>
 <tr><td>左下肩鍵</td><td>Shift</td></tr>
