--- a/handheld/pyra_spec.htm
+++ b/handheld/pyra_spec.htm
@@ -3,8 +3,7 @@
 <head><script type="text/javascript" src="../page_head.js"></script>
 
 <h3><a href="../index.htm">掌機</a> - Pyra - <b>簡要規格</b></h3>
-<hr size="1">
-<br>
+<hr size="1"><br>
 <table>
     <tr><th>CHIP</th><td>TI OMAP5432</td></tr>
     <tr><th>CPU</th><td>ARM Cortex-A15 1.5GHz (x2) and ARM Cortex-M4 1.5GHz (x2)</td></tr>
