--- a/handheld/pyra_teardown.htm
+++ b/handheld/pyra_teardown.htm
@@ -3,8 +3,7 @@
 <head><script type="text/javascript" src="../page_head.js"></script>
 
 <h3><a href="../index.htm">掌機</a> - Pyra - <b>拆機</b></h3>
-<hr size="1">
-<br>
+<hr size="1"><br>
 <p>
 其實司徒一點都不想拆Pyra掌機，因為結構很脆弱，多拆幾次後，螺絲孔可能就崩了，不得已的原因是有一顆鍵盤按鍵，不管怎麼按都沒有反應，司徒只好拆機看一下問題<br>
 <img src="pyra_teardown/1.jpg" class="maxSize"><br><br>
