--- a/handheld/pyra_asm_setup.htm
+++ b/handheld/pyra_asm_setup.htm
@@ -3,8 +3,7 @@
 <head><script type="text/javascript" src="../page_head.js"></script>
 
 <h3><a href="../index.htm">掌機</a> - Pyra - Assembly - <b>開發環境</b></h3>
-<hr size="1">
-<br>
+<hr size="1"><br>
 <p>
 安裝方式：
 </p>
