--- a/handheld/pyra_backcover.htm
+++ b/handheld/pyra_backcover.htm
@@ -3,8 +3,7 @@
 <head><script type="text/javascript" src="../page_head.js"></script>
 
 <h3><a href="../index.htm">掌機</a> - Pyra - <b>解決背蓋不平的問題</b></h3>
-<hr size="1">
-<br>
+<hr size="1"><br>
 <p>
 背蓋鬆垮真的很影響手感<br>
 <img src="pyra_backcover/1.jpg" class="maxSize"><br><br>
