--- a/handheld/pyra_build_kernel.htm
+++ b/handheld/pyra_build_kernel.htm
@@ -3,8 +3,7 @@
 <head><script type="text/javascript" src="../page_head.js"></script>
 
 <h3><a href="../index.htm">掌機</a> - Pyra - <b>Build Kernel</b></h3>
-<hr size="1">
-<br>
+<hr size="1"><br>
 <p>
 參考資訊：<br>
 https://projects.goldelico.com/p/gta04-kernel<br>
