--- a/handheld/pyra_debian12_xmodmap.htm
+++ b/handheld/pyra_debian12_xmodmap.htm
@@ -3,8 +3,7 @@
 <head><script type="text/javascript" src="../page_head.js"></script>
 
 <h3><a href="../index.htm">掌機</a> - Pyra - Debian 12 - <b>Xmodmap</b></h3>
-<hr size="1">
-<br>
+<hr size="1"><br>
 <p>
 ~/.Xmodmap
 </p>
