--- a/handheld/pyra_fix_arch.htm
+++ b/handheld/pyra_fix_arch.htm
@@ -3,8 +3,7 @@
 <head><script type="text/javascript" src="../page_head.js"></script>
 
 <h3><a href="../index.htm">掌機</a> - Pyra - <b>解決selected processor does not support cpsid i in ARM mode問題</b></h3>
-<hr size="1">
-<br>
+<hr size="1"><br>
 <p>
 參考資訊：<br>
 https://groups.google.com/g/linux.debian.bugs.dist/c/2AWbk5Dxy54<br>
