--- a/handheld/pyra_fix_readonly.htm
+++ b/handheld/pyra_fix_readonly.htm
@@ -3,8 +3,7 @@
 <head><script type="text/javascript" src="../page_head.js"></script>
 
 <h3><a href="../index.htm">掌機</a> - Pyra - <b>解決read-only member vm_flags問題</b></h3>
-<hr size="1">
-<br>
+<hr size="1"><br>
 <p>
 參考資訊：<br>
 https://lore.kernel.org/lkml/CR55BD4YCDR1.22R5TLYJW6YS0@vincent-arch/t<br><br>
