--- a/handheld/pyra_fix_secclass.htm
+++ b/handheld/pyra_fix_secclass.htm
@@ -3,8 +3,7 @@
 <head><script type="text/javascript" src="../page_head.js"></script>
 
 <h3><a href="../index.htm">掌機</a> - Pyra - <b>解決please update secclass_map問題</b></h3>
-<hr size="1">
-<br>
+<hr size="1"><br>
 <p>
 參考資訊：<br>
 https://mudongliang.github.io/2021/01/20/error-new-address-family-defined-please-update-secclass_map.html<br><br>
