--- a/handheld/pyra_fix_underscore.htm
+++ b/handheld/pyra_fix_underscore.htm
@@ -3,8 +3,7 @@
 <head><script type="text/javascript" src="../page_head.js"></script>
 
 <h3><a href="../index.htm">掌機</a> - Pyra - <b>解決bookworm系統沒有_、:符號問題</b></h3>
-<hr size="1">
-<br>
+<hr size="1"><br>
 <p>
 參考資訊：<br>
 https://pyra-handheld.com/boards/threads/anyone-else-have-problems-with-the-underscore-_-on-bullseye.99740<br><br>
