--- a/handheld/pyra_interconn.htm
+++ b/handheld/pyra_interconn.htm
@@ -3,8 +3,7 @@
 <head><script type="text/javascript" src="../page_head.js"></script>
 
 <h3><a href="../index.htm">掌機</a> - Pyra - Architecture - <b>Interconnect Overview</b></h3>
-<hr size="1">
-<br>
+<hr size="1"><br>
 <p>
 <img src="pyra_interconn/1.jpg" class="maxSize">
 </p>
