--- a/handheld/pyra_pcr.htm
+++ b/handheld/pyra_pcr.htm
@@ -3,8 +3,7 @@
 <head><script type="text/javascript" src="../page_head.js"></script>
 
 <h3><a href="../index.htm">掌機</a> - Pyra - Architecture - <b>Pad Configuration Register</b></h3>
-<hr size="1">
-<br>
+<hr size="1"><br>
 <p>
 <img src="pyra_pcr/1.jpg" class="maxSize"><br>
 <img src="pyra_pcr/2.jpg" class="maxSize"><br>
