--- a/handheld/pyra_uboot_param.htm
+++ b/handheld/pyra_uboot_param.htm
@@ -3,8 +3,7 @@
 <head><script type="text/javascript" src="../page_head.js"></script>
 
 <h3><a href="../index.htm">掌機</a> - Pyra - <b>預設U-Boot參數</b></h3>
-<hr size="1">
-<br>
+<hr size="1"><br>
 <pre>
 arch=arm
 baudrate=115200
